Adding mappers and clean up codes