@@ -3,7 +3,6 @@ package springinfra.model.dto.crud.response;
 import springinfra.model.domain.BaseDomain;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class DefaultCrudApiResponseGenerator<E extends BaseDomain<? extends Number>> implements CrudApiResponseGenerator<E> {
 
@@ -24,7 +23,7 @@ public class DefaultCrudApiResponseGenerator<E extends BaseDomain<? extends Numb
 
     @Override
     public List<Object> onList(List<E> entityList) {
-        return entityList.stream().map(this::onFind).collect(Collectors.toList());
+        return entityList.stream().map(this::onFind).toList();
     }
 
     @Override
